Change alert message in yesChoice function
Updated the alert message in the yesChoice function to express love.

--- a/uhmm.html
+++ b/uhmm.html
@@ -71,7 +71,7 @@
 
   <script>
     function yesChoice() {
-      alert("Yay! 💖");
+      alert("I LOVE YOU BEB!");
       window.location.href = "baby.html";
     }
 
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
