Change alert message in yesChoice function
Updated alert message in yesChoice function.

--- a/baby.html
+++ b/baby.html
@@ -91,7 +91,7 @@
 
   <script>
     function yesChoice() {
-      alert("Yay! 💘");
+      alert("I LOVE YOUUUU");
       window.location.href = "mwuah.html";
     }
 
@@ -118,3 +118,4 @@
 
 </body>
 </html>
+
